Fix validations and clear prompt